# darmstadt-termine

./: .gitignore  LICENSE  README.md  admin.py  apps.py  conf.py  forms.py  models.py  pyproject.toml  scraper.py  tokens.py  urls.py  views.py
darmstadt_termine/: admin.py  apps.py  conf.py  fields.py  forms.py  models.py  scraper.py  tokens.py  urls.py  views.py  widgets.py
darmstadt_termine/migrations/: 0001_initial.py  0002_alter_appointment_unique_together.py  0003_alter_notification_last_sent.py  0004_notification_active_notification_token_selector_and_more.py  0005_alter_notification_token_selector_and_more.py  0006_alter_appointment_options_and_more.py  0007_alter_notification_last_sent.py  0008_notification_language.py  0009_appointmenttype_active_and_more.py  0010_alter_appointmenttype_active_and_more.py  0011_scraperrun.py  0012_department_location_appointment_location_and_more.py  0013_alter_appointment_location_and_more.py  (+11 more)
migrations/: 0001_initial.py  0002_alter_appointment_unique_together.py  0003_alter_notification_last_sent.py  0004_notification_active_notification_token_selector_and_more.py  0005_alter_notification_token_selector_and_more.py  0006_alter_appointment_options_and_more.py  0007_alter_notification_last_sent.py  0008_notification_language.py  0009_appointmenttype_active_and_more.py  0010_alter_appointmenttype_active_and_more.py  0011_scraperrun.py  0012_department_location_appointment_location_and_more.py  0013_alter_appointment_location_and_more.py
templatetags/: notification_tags.py
utils/: email.py  models.py  site.py  time.py
(+50 files in other folders)
