[tool.poetry]
name = "darmstadt-termine"
version = "1.0.2"
description = "Scans for available appointments on the webpage of the administrative office of Darmstadt"
authors = ["Per Göttlicher <contact@pergoet.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django-crispy-forms = "*"
crispy-bootstrap5 = "*"
django = "~=4.2"
beautifulsoup4 = "*"
httpx = "*"
django-appconf = "*"
lxml = "*"


[tool.poetry.group.dev.dependencies]
django-extensions = "*"
yappi = "*"
djlint = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.djlint]
use_gitignore = true
profile = "django"
ignore = "H030,H031,H029,H005"
